# telix

./: .gitignore  Cargo.toml  README.md  rust-toolchain.toml  telix_design_doc.md
.cargo/: config.toml
docs/: 32bit_compat_superpages.md  driver_model.md  graphics_architecture.md  network_storage_io.md  personality-architecture.md  personality_servers.md  roadmap.md  superpage-clustering-report.typ  telix-development-roadmap.md  tracing_infrastructure.md  xwayland-gnome-firefox-roadmap.md
ghc-telix/: build.sh  target-aarch64-telix.json
ghc-telix/rts/: IOManager.c  MBlock.c  OSThreads.c  Timer.c
initramfs/: bench  blk_srv  cache_srv  calc  cap_test  console_srv  devfs_srv  echo_client  event_srv  ext2_srv  fat16_srv  getty_login  grant_echo  hello  hello.txt  hello_c  init  initdb_test  initramfs_srv  inotify_srv  ld-telix  libc_test  macro_bench  net_srv  pg_full_test  pipe_drain  pipe_srv  pipe_upper  pong  postmaster_test  procfs_srv  proxy_srv  pthread_test  pty_srv  ramdisk_srv  rootfs_srv  security_srv  shell  shm_srv  sock_test  (+10 more)
kernel/: Cargo.toml
kernel/src/: main.rs  trace.rs
kernel/src/arch/: cpu.rs  elf.rs  irq.rs  mod.rs  timer.rs  trapframe.rs
kernel/src/boot/: cmdline.rs  mod.rs
kernel/src/cap/: capability.rs  capset.rs  cdt.rs  cnode.rs  mod.rs  space.rs
kernel/src/drivers/: mod.rs  virtio_blk.rs  virtio_mmio.rs
kernel/src/firmware/: acpi.rs  dtb.rs  mod.rs  multiboot.rs
kernel/src/io/: blk_server.rs  initramfs.cpio  initramfs.rs  irq_dispatch.rs  mod.rs  namesrv.rs  protocol.rs  server.rs
kernel/src/ipc/: art.rs  message.rs  mod.rs  port.rs  port_set.rs
kernel/src/loader/: elf.rs  mod.rs
kernel/src/mm/: aspace.rs  cowgroup.rs  extent.rs  fault.rs  frame.rs  grant.rs  hat.rs  mod.rs  object.rs  page.rs  paged_array.rs  pager.rs  pagevec.rs  phys.rs  ptshare.rs  radix_pt.rs  slab.rs  stats.rs  vma.rs  vmatree.rs  wsclock.rs  zeropool.rs
kernel/src/sched/: cpumask.rs  mod.rs  (+8 more)
musl-telix/: build-x86_64.sh  build.sh  link-loongarch64.ld  link-mips64.ld
musl-telix/include/: assert.h  ctype.h  dirent.h  elf.h  errno.h  getopt.h  grp.h  inttypes.h  limits.h  locale.h  math.h  netdb.h  pthread.h  pwd.h  regex.h  setjmp.h  signal.h  stdarg.h  stddef.h  stdint.h  stdio.h  stdlib.h  string.h  syslog.h  termios.h  time.h  unistd.h
musl-telix/src/: assert.c  byteorder.c  crypto_chacha20.c  crypto_csprng.c  crypto_curve25519.c  crypto_ed25519.c  crypto_sha256.c  crypto_sha512.c  ctype.c  dirent.c  dup.c  env.c  epoll.c  errno.c  exit.c  fd.c  file.c  getopt.c  init.c  ipc.c  locale.c  malloc.c  mman.c  netdb.c  pipe.c  poll.c  printf.c  process.c  pthread.c  pwgrp.c  random.c  read.c  regex.c  select.c  signal.c  socket.c  ssh_session.c  ssh_transport.c  stdio_file.c  strconv.c  (+7 more)
musl-telix/test/: calc.c  getty_login.c  hello.c  initdb_test.c  ld-telix.c  libc_test.c  pg_full_test.c  postmaster_test.c  pthread_test.c  sock_test.c  sshd.c  stress_test.c  tsh.c  tz_test.c
targets/: aarch64-telix-none.json  mips64el-telix-none.json
tools/: build-kernel.sh  build-user.sh  make-ext2.sh  make-fat16.sh  make-initramfs.sh  make-test-disk.sh  run-qemu-loongarch64.sh  run-qemu-mips64.sh  run-qemu-riscv.sh  run-qemu-x86.sh  run-qemu.sh
userlib/: Cargo.toml
userlib/src/: aio.rs  fd.rs  green.rs  lib.rs  pipe.rs  poll.rs  profile.rs  pty.rs  start.rs  sync.rs  syscall.rs
userlib/src/arch/: aarch64.rs  loongarch64.rs  mips64.rs  mod.rs  riscv64.rs  x86_64.rs
(+105 files in other folders)
