[package]
name = "telix-userlib"
version = "0.1.0"
edition = "2024"

[lib]
name = "userlib"
path = "src/lib.rs"

[[bin]]
name = "init"
path = "bin/init.rs"

[[bin]]
name = "hello"
path = "bin/hello.rs"

[[bin]]
name = "echo_client"
path = "bin/echo_client.rs"

[[bin]]
name = "initramfs_srv"
path = "bin/initramfs_srv.rs"

[[bin]]
name = "ramdisk_srv"
path = "bin/ramdisk_srv.rs"

[[bin]]
name = "blk_srv"
path = "bin/blk_srv.rs"
