[package]
name = "telix-userlib"
version = "0.1.0"
edition = "2024"

[lib]
name = "userlib"
path = "src/lib.rs"

[[bin]]
name = "init"
path = "bin/init.rs"

[[bin]]
name = "hello"
path = "bin/hello.rs"

[[bin]]
name = "echo_client"
path = "bin/echo_client.rs"

[[bin]]
name = "initramfs_srv"
path = "bin/initramfs_srv.rs"

[[bin]]
name = "ramdisk_srv"
path = "bin/ramdisk_srv.rs"

[[bin]]
name = "blk_srv"
path = "bin/blk_srv.rs"

[[bin]]
name = "fat16_srv"
path = "bin/fat16_srv.rs"

[[bin]]
name = "console_srv"
path = "bin/console_srv.rs"

[[bin]]
name = "shell"
path = "bin/shell.rs"

[[bin]]
name = "net_srv"
path = "bin/net_srv.rs"

[[bin]]
name = "pipe_upper"
path = "bin/pipe_upper.rs"

[[bin]]
name = "spin"
path = "bin/spin.rs"

[[bin]]
name = "bench"
path = "bin/bench.rs"

[[bin]]
name = "pong"
path = "bin/pong.rs"

[[bin]]
name = "grant_echo"
path = "bin/grant_echo.rs"

[[bin]]
name = "macro_bench"
path = "bin/macro_bench.rs"

[[bin]]
name = "cap_test"
path = "bin/cap_test.rs"

[[bin]]
name = "cache_srv"
path = "bin/cache_srv.rs"

[[bin]]
name = "security_srv"
path = "bin/security_srv.rs"

[[bin]]
name = "ext2_srv"
path = "bin/ext2_srv.rs"

[[bin]]
name = "shm_srv"
path = "bin/shm_srv.rs"

[[bin]]
name = "vfs_srv"
path = "bin/vfs_srv.rs"

[[bin]]
name = "tmpfs_srv"
path = "bin/tmpfs_srv.rs"

[[bin]]
name = "devfs_srv"
path = "bin/devfs_srv.rs"

[[bin]]
name = "procfs_srv"
path = "bin/procfs_srv.rs"

[[bin]]
name = "uds_srv"
path = "bin/uds_srv.rs"

[[bin]]
name = "pipe_srv"
path = "bin/pipe_srv.rs"

[[bin]]
name = "pty_srv"
path = "bin/pty_srv.rs"

[[bin]]
name = "event_srv"
path = "bin/event_srv.rs"

[[bin]]
name = "inotify_srv"
path = "bin/inotify_srv.rs"

[[bin]]
name = "syslog_srv"
path = "bin/syslog_srv.rs"

[[bin]]
name = "sysv_srv"
path = "bin/sysv_srv.rs"
